# brain

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.rst  PRODUCTION_FIXES_SUMMARY.md  README.md  TASKS_NEW.md  docker-compose-dev.yaml  requirements.txt  requirements_docs.txt  setup.cfg
brain/: .env.example  .eslintignore  .eslintrc.cjs  .gitignore  AGENTS.md  ASYNC_FIX_SUMMARY.md  CLAUDE.md  DRAFT_DELETION_FIX.md  DRAFT_LOADING_FIX_ANALYSIS.md  DRAFT_PERSISTENCE_FIXES.md  DRAFT_PERSISTENCE_FIX_SUMMARY.md  DRAFT_PERSISTENCE_FIX_V2.md  INDEXEDDB_DRAFT_FIX.md  LIBRARY_PAGE_SUMMARY.md  LOCALSTORAGE_FIX_SUMMARY.md  REACT_COMPILER_IMPLEMENTATION.md  docker-compose.yml  eslint.config.cjs  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test_draft_fix.html  test_draft_persistence.html
brain/apps/common/: AGENTS.md  filters.py  models.py  storage.py
brain/apps/companies/: AGENTS.md  admin.py  tasks.py  urls.py
brain/apps/deals/: AGENTS.md  AGENTS_DEALS_IDEAS.md  AGENTS_FILE_MANAGEMENT.md  admin.py  import_export.py  managers.py  signals.py  storage.py  tasks.py  (+2 more)
brain/assets/: AGENTS.md  components.json  tsconfig.json  vite.config.ts
brain/backups/: db_dump_20250811_235241.json
brain/brain/: api_urls.py  celery.py  context_processors.py  settings.py  urls.py
brain/docs/: DRAFT_PERSISTENCE_COMPLETE_SOLUTION.md  DRAFT_PERSISTENCE_FIXES_TIMELINE.md  DRAFT_PERSISTENCE_TECHNICAL_DETAILS.md
brain/seed_data/: README.md
brain/templates/: base.html  main.html
brain/templatetags/: vite.py
(+689 files in other folders)
